# EISAP

./: .gitignore  EISAP.py  LICENSE  README.md  SOCEIS.py  import dearpygui.py  pyproject.toml  tempCodeRunnerFile.python  test.py
Functions/: figure_initialization.py
GUI/: dearpygui_learn.py
Methods/CNLS/: Circuit.py
Methods/CNLS/Utils/: ImpedanceFunctions.py  PeakDerivative.py  __init__.py
Methods/DRT/: DRT.py
Methods/DRT/Utils/: ConvertToASR.py  DRT_tikhonov.py  DRT_tikonov.py  Evaluate_Z_RC_L_C.py  LambdaOPT.py  Linear_KK.py  Linear_KK_mu.py  Linear_KK_opt_mu_cut.py  ResampleEIS.py  rmoutliers.py
Projects/00_Code test/99_eg_degradation/: 2024-09-04_hq_sp_cu-31_durabilitiy_0846_425-75_060-120-120_780_dc5024ma_ac500ma_eis04.txt
Projects/00_Code test/99_function_test/: 02_CNLS_test.py
Projects/Code test/: 01_DRT_test.py  02_CNLS_test.py  test.py
Projects/Code test/99_eg_degradation/: 2024-09-01_hq_sp_cu-31_durabilitiy_1826_425-75_060-120-120_780_dc5024ma_ac500ma_eis01.txt  2024-09-02_hq_sp_cu-31_durabilitiy_1826_425-75_060-120-120_780_dc5024ma_ac500ma_eis02.txt  2024-09-03_hq_sp_cu-31_durabilitiy_0846_425-75_060-120-120_780_dc5024ma_ac500ma_eis03.txt
Projects/Code test/99_function_test/: 01_DRT_test.py
docs/superpowers/specs/: 2026-06-16-cnls-viewer-topology-fixes-design.md
eisap/: __init__.py  __main__.py
soceis/: __init__.py  __main__.py
src/Functions/: Beckhoff_view.py  IV_view.py  ReadIV_Zahner.py  Read_Beckhoff.py  SOCEIS_view.py  __init__.py  figure_initialization.py  update_online.py
src/Functions/01_Data_read/: read_RUBY_txt.py  read_biologic_file_mpt.py  read_fcd_multichannel.py  read_ftd_multichannel.py  read_gamry_dta.py  read_general_all.py  read_general_all_german.py  read_txt_standard_FReIm.py  read_txtcsv_standard_FReIm.py  read_zahner_csv.py  read_zahner_csv_multichannel.py  read_zahner_txt.py  read_zahner_txt_ncepu.py  read_zahner_txt_z_analysis.py
src/GUI/: __init__.py  config.json  config.py  gui_main.py  gui_tab_cnls.py  gui_tab_drt.py  gui_tab_eis.py  gui_tab_soceis.py  requirements.txt
src/GUI/Utils/: __init__.py  cnls_elements.py  cnls_functions.py  cnls_plots.py  cnls_table.py  drt_functions.py  drt_plots.py  drt_table.py  eis_batch_manual.py  eis_functions.py  eis_plots.py  eis_single_manual.py  eis_table.py  file_list.py  file_monitor.py  progress_modal.py  save_dpgplot.py  small_functions.py  update_manager.py  update_window_size.py  updater.py
src/Methods/CNLS/: Circuit.py
src/Methods/CNLS/Utils/: DataReference.py  ImpedanceFunctions.py  PeakDerivative.py  Topology.py  __init__.py
src/Methods/DRT/: DRT.py
src/Methods/DRT/Utils/: ConvertToASR.py  DRT_rbf.py  DRT_tikhonov.py  DRT_tknv_pos.py  Evaluate_Z_RC_L_C.py  LambdaOPT.py  Linear_KK.py  Linear_KK_mu.py  Linear_KK_opt_mu_cut.py  ResampleEIS.py  Z_HIT.py
